[gd_scene load_steps=13 format=2]

[ext_resource path="res://coin.tscn" type="PackedScene" id=1]
[ext_resource path="res://gamescene/UI-GameScene.tres" type="Theme" id=2]
[ext_resource path="res://images/zone6.png" type="Texture" id=3]
[ext_resource path="res://images/story intro cover.png" type="Texture" id=4]
[ext_resource path="res://images/WIN.png" type="Texture" id=5]
[ext_resource path="res://images/wetland.png" type="Texture" id=6]
[ext_resource path="res://WinLevel6.gd" type="Script" id=7]
[ext_resource path="res://images/Holly Cottage.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.960784, 0.960784, 0.960784, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.886275, 0.886275, 0.886275, 0.592157 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.658824, 0.74902, 0.678431, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color( 1, 0.905882, 0.658824, 0.94902 )
shadow_size = 1

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.729412, 0.803922, 0.67451, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="WinLevel6" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="Label2" type="Label" parent="."]
margin_left = 405.0
margin_top = 400.0
margin_right = 646.0
margin_bottom = 423.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Click the label to explore offline activities?"

[node name="Panel2" type="Panel" parent="."]
margin_left = 801.0
margin_top = 421.0
margin_right = 841.0
margin_bottom = 461.0
rect_scale = Vector2( 3.97078, 3.23205 )
custom_styles/panel = SubResource( 2 )

[node name="end of the journey" type="Button" parent="."]
margin_left = 797.0
margin_top = 419.0
margin_right = 809.0
margin_bottom = 439.0
rect_scale = Vector2( 13.1852, 6.84615 )
flat = true

[node name="Button" type="Button" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.6 )
margin_left = 811.0
margin_top = 425.0
margin_right = 3706.0
margin_bottom = 3041.0
rect_scale = Vector2( 0.0456085, 0.0487832 )
theme = ExtResource( 2 )
text = " next level"
flat = true

[node name="Label3" type="Label" parent="."]
margin_left = 837.0
margin_top = 445.0
margin_right = 901.0
margin_bottom = 494.0
rect_scale = Vector2( 1.5181, 1.43275 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "End of the 
journey!"

[node name="Sprite7" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.698039 )
position = Vector2( 534, 515 )
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 530, 225 )
scale = Vector2( 0.397151, 0.397151 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="."]
modulate = Color( 0.341176, 0.341176, 0.341176, 1 )
position = Vector2( 514, 433 )
scale = Vector2( 1.1871, 0.00598873 )
texture = ExtResource( 4 )

[node name="coin" parent="." instance=ExtResource( 1 )]
position = Vector2( 62, 65.0003 )
scale = Vector2( 0.670548, 0.573838 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( -158, -81 )

[node name="Panel3" type="Panel" parent="Node2D"]
margin_left = 423.0
margin_top = 207.0
margin_right = 564.0
margin_bottom = 232.0
custom_styles/panel = SubResource( 3 )

[node name="Panel" type="Panel" parent="Node2D"]
margin_left = 428.0
margin_top = 211.0
margin_right = 559.0
margin_bottom = 228.0
custom_styles/panel = SubResource( 4 )

[node name="Label" type="Label" parent="Node2D"]
margin_left = 460.0
margin_top = 208.0
margin_right = 537.0
margin_bottom = 231.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Holly Cottage"

[node name="Node2D2" type="Node2D" parent="."]
position = Vector2( 36, -62 )

[node name="Panel3" type="Panel" parent="Node2D2"]
margin_left = 423.0
margin_top = 207.0
margin_right = 564.0
margin_bottom = 232.0
custom_styles/panel = SubResource( 3 )

[node name="Panel" type="Panel" parent="Node2D2"]
margin_left = 428.0
margin_top = 211.0
margin_right = 559.0
margin_bottom = 228.0
custom_styles/panel = SubResource( 4 )

[node name="Label" type="Label" parent="Node2D2"]
margin_left = 460.0
margin_top = 208.0
margin_right = 537.0
margin_bottom = 231.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Old Salting point"

[node name="Node2D3" type="Node2D" parent="."]
position = Vector2( 204, -97 )

[node name="Panel3" type="Panel" parent="Node2D3"]
margin_left = 423.0
margin_top = 207.0
margin_right = 564.0
margin_bottom = 232.0
custom_styles/panel = SubResource( 3 )

[node name="Panel" type="Panel" parent="Node2D3"]
margin_left = 428.0
margin_top = 211.0
margin_right = 559.0
margin_bottom = 228.0
custom_styles/panel = SubResource( 4 )

[node name="Label" type="Label" parent="Node2D3"]
margin_left = 460.0
margin_top = 208.0
margin_right = 537.0
margin_bottom = 231.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Don's Marsh"

[node name="Label4" type="Label" parent="."]
margin_left = 88.9997
margin_top = 49.0
margin_right = 129.0
margin_bottom = 72.0
rect_scale = Vector2( 1.30504, 1.30504 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "X 1"

[node name="HC" type="Sprite" parent="."]
visible = false
position = Vector2( 338, 73 )
scale = Vector2( 0.387265, 0.387265 )
texture = ExtResource( 8 )

[node name="HollyCottage" type="Button" parent="."]
margin_left = 268.0
margin_top = 125.0
margin_right = 408.0
margin_bottom = 152.0
flat = true

[node name="OSP" type="Sprite" parent="."]
visible = false
position = Vector2( 532, 94 )
scale = Vector2( 0.335995, 0.335995 )
texture = ExtResource( 6 )

[node name="Old Salting point" type="Button" parent="."]
margin_left = 459.0
margin_top = 145.0
margin_right = 599.0
margin_bottom = 172.0
flat = true

[node name="DM" type="Sprite" parent="."]
visible = false
position = Vector2( 700, 58 )
scale = Vector2( 0.358222, 0.358222 )
texture = ExtResource( 6 )

[node name="Don\'s Marsh" type="Button" parent="."]
margin_left = 628.0
margin_top = 109.0
margin_right = 768.0
margin_bottom = 136.0
flat = true

[connection signal="pressed" from="end of the journey" to="." method="_on_end_of_the_journey_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="HollyCottage" to="." method="_on_HollyCottage_mouse_entered"]
[connection signal="mouse_entered" from="Old Salting point" to="." method="_on_Old_Salting_point_mouse_entered"]
[connection signal="mouse_entered" from="Don's Marsh" to="." method="_on_Dons_Marsh_mouse_entered"]
